<resources>
    <string name="app_name">e生财富</string>
    <string name="next_step">下一步</string>
    <string name="login_right_txt">注册</string>
    <string name="login_userName">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_userName_txt">请输入手机号</string>
    <string name="login_password_txt">请输入密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_ok">登录</string>
    <string name="login_userName_txt2">手机号/邮箱/用户名</string>
    <string name="again_pass_message">重新发送短信验证码</string>
    <string name="input_regist_telphone">请输入注册手机号</string>
    <string name="verification_code">收到的验证码</string>
    <string name="security_center_phone_hint_forget">11位手机号码</string>
    <string name="dis_pick_success">领取成功</string>
    <string name="mine_setting">设置</string>
    <string name="mine_more">更多</string>
    <string name="mine_save">保存</string>
    <string name="mine_finish">完成</string>
    <string name="mine_copyright">Copyright © 2015 e生财富. All Rights Reserved</string>
    <string name="mine_copyright_page">© 2013-2016 yscf.com All Rights Reserved</string>
    <string name="mine_total_assets">总资产额</string>
    <string name="mine_balance">可用余额：￥%1$s</string>
    <string name="mine_balance_hint">￥%1$s</string>
    <string name="mine_card">卡券</string>
    <string name="mine_credits">积分</string>
    <string name="mine_bank_card">银行卡</string>
    <string name="mine_top_up">充值</string>
    <string name="mine_carry_cash">提现</string>
    <string name="mine_no_login">立即登录/注册</string>
    <string name="mine_no_login_hello">您好，欢迎来到e生财富</string>
    <string name="mine_drop_project">已投项目</string>
    <string name="mine_standby_check">待收查询</string>
    <string name="mine_my_bond">我的债权</string>
    <string name="mine_refund">还款</string>
    <string name="mine_trading_list">交易记录</string>
    <string name="mine_auto_tender">自动投标</string>
    <string name="mine_security_center">安全中心</string>
    <string name="mine_invite_prize">邀请有奖</string>
    <string name="mine_setting_clear_cache_label">清理缓存</string>
    <string name="mine_setting_feedback">意见反馈</string>
    <string name="mine_setting_feedback_hint">请输入您的意见</string>
    <string name="mine_setting_feedback_submit">提交</string>
    <string name="mine_setting_feedback_submit_success">提交成功</string>
    <string name="mine_setting_about">关于我们</string>
    <string name="mine_setting_loginout">退出登录</string>
    <string name="mine_setting_loginout_success">退出成功</string>
    <string name="mine_clear_label">确定清理缓存?</string>
    <string name="mine_clear_label_desc">本次清理将会为您释放%1$s空间</string>
    <string name="mine_loginout_label">确定退出登录?</string>
    <string name="mine_about_version">APP版本</string>
    <string name="mine_about_weixin">官方微信</string>
    <string name="mine_about_weibo">官方微博</string>
    <string name="mine_about_service">客服电话</string>
    <string name="mine_about_working_time">客服工作时间：9:00-20:00(工作日)</string>
    <string name="mine_about_service_tel">4009-998-992</string>
    <string name="call">拨打</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="use_space">%1$sM</string>
    <string name="vip_arrave_time">到期时间：</string>
    <string name="open_time">开通时间</string>
    <string name="mine">用户</string>
    <string name="mine_cumulative_reward">累积奖励</string>
    <string name="vip_recharge">充值</string>
    <string name="vip_level_hint">还差%1$s点升级到V%2$s，更多权益等着你</string>
    <string name="vip_no_level_hint">您还不是VIP，无法享受会员权益</string>
    <string name="setting_user">请设置用户名</string>
    <string name="mine_trading_rest_money">余额：1000.00</string>
    <string name="mine_trading_type">线上充值</string>
    <string name="mine_trading_time">2015年7月8日  12:30:24</string>
    <string name="mine_auto_tender_item_title_left">当前排名：25</string>
    <string name="mine_auto_tender_item_title_one">固定金额</string>
    <string name="mine_auto_tender_item_title_two">固定比例</string>
    <string name="mine_auto_tender_ratio">投资比例：</string>
    <string name="mine_auto_tender_years">投资年限：</string>
    <string name="mine_auto_tender_rate">投资利率：</string>
    <string name="mine_auto_tender_projects">投资项目：</string>
    <string name="mine_auto_tender_fixed_amount">固定  1000.00元</string>
    <string name="mine_auto_tender_rest_ratio">余额  10%</string>
    <string name="mine_auto_tender_unlimited">不限</string>
    <string name="mine_auto_tender_months">1月-10月</string>
    <string name="mine_auto_tender_ratios">15%-20%</string>
    <string name="mine_auto_tender_e_plan">e计划</string>
    <string name="mine_auto_tender_e_house">e首房</string>
    <string name="mine_auto_tender_e_mortgage">e抵押</string>
    <string name="mine_auto_tender_null_text">您尚未添加自动投标</string>
    <string name="mine_auto_tender_null_text_tishi">您还可以添加三个自动投标设置</string>
    <string name="auto_tender_tv_tishi">您还可以添加一个备选的自动投标设置</string>
    <string name="auto_tender_add_head_tv_01">投资金额</string>
    <string name="auto_tender_add_head_tv_02">投资参数</string>
    <string name="auto_tender_add_head_tv_03">投资项目</string>
    <string name="auto_tender_add_money_btn_text_01">按固定金额投资</string>
    <string name="auto_tender_add_money_btn_text_02">按余额比例投资</string>
    <string name="auto_tender_add_money_et_02_left">余额比例</string>
    <string name="auto_tender_add_money_et_01">最低可投￥50.00</string>
    <string name="auto_tender_add_money_et_02">最低可投10%</string>
    <string name="auto_tender_add_parameter_tvline_01">投月标范围</string>
    <string name="auto_tender_add_parameter_tvline_02">收益率范围</string>
    <string name="auto_tender_add_parameter_et_hint">请选择</string>
    <string name="auto_tender_tv_guodu">~</string>
    <string name="auto_tender_on">自动投标开启成功</string>
    <string name="auto_tender_off">自动投标关闭成功</string>
    <string name="prize_title_right">我的邀请</string>
    <string name="prize_strategy">邀请说明：</string>
    <string name="prize_strategy1">1.发送你的邀请链接给亲爱的盆友；</string>
    <string name="prize_strategy2">2.发送你的转述二维码给时尚的盆友；</string>
    <string name="prize_strategy3">3.还有你的邀请码，可以分享给好友。</string>
    <string name="prize_check">邀请成功好友在我的邀请中查看</string>
    <string name="prize_add_friend">邀请好友</string>
    <string name="prize_my">我的邀请码：</string>
    <string name="prize_now">立即邀请</string>
    <string name="security_level_high">安全极高</string>
    <string name="security_level_middle">安全中等</string>
    <string name="security_level_low">安全极低</string>
    <string name="security_level_high_hint">您的账号目前非常安全，请继续保持!</string>
    <string name="security_level_middle_hint">您的账号目前良好，建议继续完善资料!</string>
    <string name="security_level_low_hint">您的账号目前为低，建议立即完善资料!</string>
    <string name="security_center_real_name">实名认证</string>
    <string name="security_center_phone_bound">手机绑定</string>
    <string name="security_center_phone_bound2">绑定手机号</string>
    <string name="security_center_phone_bound_ok">绑定成功</string>
    <string name="security_center_phone_auth">手机验证</string>
    <string name="security_center_reset_pay_auth">重置交易密码</string>
    <string name="security_center_login_pwd">登录密码</string>
    <string name="security_center_pay_pwd">交易密码</string>
    <string name="security_center_gesture_pwd">手势密码</string>
    <string name="security_center_gesture_pwd2">手势解锁</string>
    <string name="security_center_gesture_pwd_wen">指纹密码</string>
    <string name="security_center_real_name_auth_label">请完成实名认证</string>
    <string name="security_center_real_name_auth_label2">实名认证是资金安全与帐户安全的重要保障，认证成功后不可修改。请确保您填写的资料真实有效，所有资料将会严格保密。</string>
    <string name="security_center_real_name_auth_label3"></string>
    <string name="security_center_real_name_label">真实姓名</string>
    <string name="security_center_real_name_label_hint">请输入您的真实姓名</string>
    <string name="security_center_id_card">身份证号</string>
    <string name="security_center_id_card_hint">请输入有效身份证号</string>
    <string name="security_center_submit_auth">提交认证</string>
    <string name="security_center_no_mainland">非大陆地区实名认证通道>></string>
    <string name="security_center_submit_auth_info">您的实名认证申请已提交\n审核结果可以在安全中心查询</string>
    <string name="security_center_origin_phone">原手机号码</string>
    <string name="security_center_sms_hint">请输入短信验证码</string>
    <string name="security_center_get_sms">获取验证码</string>
    <string name="security_center_get_sms_reload">重新获取</string>
    <string name="security_center_get_sms_reload_again">重新发送短信验证码</string>
    <string name="security_center_get_sms_reload_again2">重新发送语音验证码</string>
    <string name="security_center_sms_error_hint">没收到短信？使用语音验证码</string>
    <string name="security_center_sms_voice_hint">获取语音验证码</string>
    <string name="security_center_send_sms">发送验证码</string>
    <string name="security_center_phone_hint">请输入11位手机号码</string>
    <string name="security_center_modify_pwd">修改登录密码</string>
    <string name="security_center_modify_pwd_success">修改成功</string>
    <string name="security_center_modify_set_success">设置成功</string>
    <string name="security_center_origin_pwd_hint">请输入原登录密码</string>
    <string name="security_center_new_pwd_hint">请输入新登录密码</string>
    <string name="security_center_again_pwd_hint">再次输入新登录密码</string>
    <string name="security_center_valid_phone">验证手机号码</string>
    <string name="security_center_reset_login_pwd">重置登录密码</string>
    <string name="security_center_reset_login_pwd_success">重置成功</string>
    <string name="security_center_reset_pay_pwd">重置交易密码</string>
    <string name="security_center_setting_new_pwd">设置新密码</string>
    <string name="security_center_modify_pay_pwd">修改交易密码</string>
    <string name="security_center_setting_pay_pwd">设置交易密码</string>
    <string name="security_center_origin_pay_hint">请输入原交易密码</string>
    <string name="security_center_origin_pay_auth">请输入交易密码</string>
    <string name="security_center_origin_pay_auth_again">请输入新交易密码</string>
    <string name="security_center_origin_pay_auth_again_again">请再次输入新交易密码</string>
    <string name="security_center_origin_pay_auth_again_again2">请再次输入交易密码</string>
    <string name="security_center_modify_gesture_pwd">修改手势密码</string>
    <string name="security_center_origin_gesture_pwd">请绘制原手势密码</string>
    <string name="security_center_new_gesture_pwd">设置手势密码</string>
    <string name="security_center_new_gesture_pwd_title">手势密码</string>
    <string name="security_center_new_gesture_pwd_hint">请绘制新解锁图案</string>
    <string name="security_center_again_gesture_pwd">再次绘制解锁图案</string>
    <string name="security_center_new_gesture_pwd_hint_login">请绘制图案解锁</string>
    <string name="security_center_gesture_error_hint">与上一次绘制不一致，请重新绘制</string>
    <string name="credits_task">做任务拿积分</string>
    <string name="credits_change">积分兑换</string>
    <string name="credits_task_title">积分任务</string>
    <string name="credits_change_btn">兑换</string>
    <string name="credits_vip">VIP</string>
    <string name="credits_vip_echange">VIP兑换</string>
    <string name="credits_phone_bill">话费</string>
    <string name="credits_phone_bill_title">话费兑换</string>
    <string name="credits_ticket">加息券</string>
    <string name="credits_ticket_title">加息券兑换</string>
    <string name="credits_cash">现金</string>
    <string name="credits_cash_title">现金兑换</string>
    <string name="credits_explain">积分明细</string>
    <string name="credits_no_vip_lable">非VIP积分</string>
    <string name="txt_borrower_basic_information">借款人基本信息</string>
    <string name="txt_borrower_phone">借款人:&#160;&#160;</string>
    <string name="txt_borrower_name">姓名:&#160;&#160;</string>
    <string name="txt_borrower_sex">性别:&#160;&#160;</string>
    <string name="txt_borrower_marital">婚姻状况:&#160;&#160;</string>
    <string name="txt_borrower_age">年龄:&#160;&#160;</string>
    <string name="txt_borrower_hj">户籍:&#160;&#160;</string>
    <string name="txt_tz_project_information">项目信息</string>
    <string name="txt_borrower_yt">借款用途:</string>
    <string name="txt_borrower_ly">还款来源:</string>
    <string name="txt_borrower_dy">抵押信息:</string>
    <string name="security_center_no_mainland2">非大陆地区实名认证通道》</string>
</resources>