<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >
    <include layout="@layout/title_layout_no_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/e_img_zc_authentication_03"
            android:textSize="@dimen/font_btn_lll"
            android:textColor="@color/e_main_bg_title"
            android:drawablePadding="12dp"
            android:text="@string/security_center_real_name_auth_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/security_center_real_name_auth_label2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:text="@string/security_center_real_name_label" />

            <EditText
                android:id="@+id/real_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:hint="@string/security_center_real_name_label_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_center_id_card" />

            <EditText
                android:id="@+id/id_card_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_center_id_card_hint" />
        </LinearLayout>
    </LinearLayout>
    
    <Button 
        android:id="@+id/submit_auth_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_center_submit_auth"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/security_center_no_mainland" />

</LinearLayout>