<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_layout_no_right" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_center_valid_phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="181****5678"
        android:textSize="@dimen/font_title_h" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_invite_item_height"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/sms_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/get_sms_code_btn"
            android:hint="@string/security_center_sms_hint" />

        <TextView
            android:id="@+id/get_sms_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/security_center_get_sms" />
    </RelativeLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step" />

</LinearLayout>