<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_item_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <!-- item_title -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_mine_auto_tender_item_title_left"
                style="@style/AutoTender.OrangeTextView"
                android:layout_centerVertical="true"
                android:text="@string/mine_auto_tender_item_title_left"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_mine_auto_tender_item_title"
                style="@style/AutoTender.BlackTextView"
                android:layout_centerInParent="true"
                android:text="@string/mine_auto_tender_item_title_one"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_mine_auto_tender_item_title_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/mine_auto_tender_item_title_complic" />
        </RelativeLayout>

        <!-- 灰线 -->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_line"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="#C8C7CC" />
        <!-- item_body -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/white" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/AutoTender.GrayTextView"
                        android:text="@string/mine_auto_tender_ratio" />

                    <TextView
                        android:id="@+id/tv_auto_tender_item_ratio"
                        style="@style/AutoTender.BlackTextView"
                        android:text="@string/mine_auto_tender_fixed_amount" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/AutoTender.GrayTextView"
                        android:text="@string/mine_auto_tender_years" />

                    <TextView
                        android:id="@+id/tv_auto_tender_item_years"
                        style="@style/AutoTender.BlackTextView"
                        android:text="@string/mine_auto_tender_unlimited" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/AutoTender.GrayTextView"
                        android:text="@string/mine_auto_tender_rate" />

                    <TextView
                        android:id="@+id/tv_auto_tender_item_rate"
                        style="@style/AutoTender.BlackTextView"
                        android:text="@string/mine_auto_tender_unlimited" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/AutoTender.GrayTextView"
                        android:text="@string/mine_auto_tender_projects" />

                    <TextView
                        android:id="@+id/tv_auto_tender_item_projects"
                        style="@style/AutoTender.BlackTextView"
                        android:text="@string/mine_auto_tender_e_plan" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/mine_auto_tender_item_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="31dp"
                android:focusable="true"
                android:src="@drawable/on_icon" />
        </RelativeLayout>
    </LinearLayout>
	 <TextView
        android:id="@+id/tv_auto_tender_tishi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:text="@string/auto_tender_tv_tishi"
        android:textColor="#CCCDCD"
        android:textSize="16sp"
        android:visibility="gone"/>
</LinearLayout>